--- a/techprenure.css
+++ b/techprenure.css
@@ -1,11 +1,10 @@
 body{
-    margin: 0;
-    padding: 100px;
-    background: url("https://pin.it/2fNXfci");
-    background-size: 30px;
-    background-position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: larger;
+    background-image: linear-gradient(135deg, #b2ffbc 10%, #1904e5 50%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    font-family: sans-serif;
+    opacity: 0.9;
 }
 
 .box-form{
@@ -20,22 +19,22 @@ body{
     box-shadow: 0 0 20px 6px #1696c985;
 }
 .box-form div{
-    height: auto;
+    height: 50;
 }
 
 .box-form .left{
-    color: #72a587;
-    background-size: contain;
+    color: #f9fcfa;
+    background-size: cover;
     background-repeat: inherit;
     background-image: url(IMG-20230422-WA0006.jpg);
 
 }
 
 .box-form .left .overlay{
-    padding: 40px;
+    padding: 20px;
     width: 100%;
     height: 100%;
-    background: #0b16e0ad;
+    
     overflow: hidden;
     box-sizing: border-box;
 }
@@ -46,6 +45,7 @@ body{
     font-weight: 900;
     margin-top: 40px;
     margin-bottom: 20px;
+    font-style: inherit;
 
 }
 
@@ -74,13 +74,14 @@ body{
 }
 
 .box-form .right{
-    padding: 80px;
+    padding: 20px;
     overflow: hidden;
+    margin: right;
 
 }
 
 .box-form .right h2{
-    font-size: 2vmax;
+    font-size: 1vmax;
     line-height: 0;
 }
 
